<resources>
    <string name="app_name">BankingDashboardClone</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">ICON</string>
    <string name="total_balance">Total Balance</string>
    <string name="recent">Recent</string>
    <string name="show_all">Show all</string>
    <string name="last_week">Last Week</string>
    <string name="online_transactions">Online Transaction</string>
    <string name="_2_48">2:48</string>
    <string name="are_you_having_problem_with_this_transaction_nwe_ll_help_you">Are you having problem with this transaction? \nWe\'ll help you</string>
    <string name="message_support">Message Support</string>
</resources>