<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home"
        />

    <item
        android:id="@+id/cards"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/cards"
        />

    <item
        android:id="@+id/reports"
        android:enabled="true"
        android:icon="@drawable/ic_reports_selector"
        android:title="@string/reports"
        />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_selector"
        android:title="@string/settings"
        />

</menu>